# CmakeDemo

./: .gitignore  README.md
cmakeDemo/find_package/: build.sh
cmakeDemo/find_package/bar/: CMakeLists.txt  Findbar.cmake  bar_exe.c  bar_obj1.c  bar_obj2.c  bar_shared.c  bar_static.c
cmakeDemo/find_package/bar/include/: bar.obj.h  bar_shared.h  bar_static.h
cmakeDemo/find_package/foo/: CMakeLists.txt  foo-config.cmake.in  foo_exe.c  foo_obj1.c  foo_obj2.c  foo_shared.c  foo_static.c
cmakeDemo/find_package/foo/include/: foo_obj.h  foo_shared.h  foo_static.h
cmakeDemo/find_package/main/: CMakeLists.txt  main.c
